vlib/v/checker/tests/return_ref_as_no_ref_bug.out
vlib/v/checker/tests/return_ref_as_no_ref_bug.vv:11:9: error: fn `return_not_reference` expects you to return a non reference type `BugStruct`, but you are returning `&BugStruct` instead
    9 | 
   10 | fn return_not_reference() BugStruct {
   11 |     return &BugStruct{
      |            ^
   12 |         id: 1
   13 |     }
Details: use `return *pointer` instead of `return pointer`, and just `return value` instead of `return &value`
