vlib/v/checker/tests/return_ref_as_no_ref_bug.vv
struct BugStruct {
	id int
}

fn main() {
	x := return_not_reference()
	println(x.id)
}

fn return_not_reference() BugStruct {
	return &BugStruct{
		id: 1
	}
}
